--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -28,6 +28,11 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-commerce
+
 logging:
   level:
     com.example.userservice: DEBUG
+
+token:
+  expiration_time: 864000000  #10 days
+  secret: user_token          #email
