Users Microservice - AuthorizationHeaderFilter 추가

--- a/apigateway-example/src/main/resources/application.yml
+++ b/apigateway-example/src/main/resources/application.yml
@@ -69,6 +69,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie # 매 req 새롭게 보이도록
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
@@ -77,3 +78,6 @@ spring:
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/order-service/**
+
+token:
+  secret: user_token
