--- a/apigateway-example/pom.xml
+++ b/apigateway-example/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
