--- a/apigateway-example/src/main/resources/application.yml
+++ b/apigateway-example/src/main/resources/application.yml
@@ -11,6 +11,11 @@ eureka:
 spring:
   application:
     name: gateway-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: test1234
   cloud:
     gateway:
       default-filters:
@@ -91,4 +96,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans, httptrace
+        include: refresh, health, beans, httptrace, busrefresh
