--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       server:
@@ -12,3 +17,9 @@ spring:
 #          username: [id], -> file ?? ????
 #          password: [pwd]
 #          uri: file:///Users/xpmxf4/desktop/develop/spring-cloud/git-local-repo
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, httptrace, busrefresh 
